# chromarenderer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.gradle
src/benchmarks/cpp/: Hitpoint.cpp
src/benchmarks/cpp/benchmarks/: FibonacciBenchmark.cpp  SampleBenchmark.cpp
src/benchmarks/headers/: Hitpoint.h  Ray.h  Triangle.h
src/chroma/cpp/: AbstractRenderCanvas.cpp  AccumulationBuffer.cpp  Aperture.cpp  BVHNode.cpp  BVHTree.cpp  Camera.cpp  Chroma.h  ChromaCIE.h  Disk.cpp  Fibonacci.cpp  Hitpoint.cpp  Image.cpp  Material.cpp  Matrix3x3.cpp  NextEventEstimatorLens.cpp  NextEventEstimatorLight.cpp  Pathtracer.cpp  Primitive.cpp  Ray.cpp  Renderer.cpp  SDLRenderCanvas.cpp  Sampler.cpp  Scene.cpp  Sphere.cpp  StringHelper.h  SunSky.cpp  ThinLensCamera.cpp  Triangle.cpp  main.cpp  rgbe.cpp  rgbe.h  tga.cpp  tga.h
src/chroma/headers/: AbstractRenderCanvas.h  AccStruct.h  AccumulationBuffer.h  Aperture.h  BSPUtils.h  BVHNode.h  BVHTree.h  BoundingBox.h  Camera.h  Defines.h  Disk.h  Environment.h  Hitpoint.h  Image.h  Material.h  Matrix3x3.h  NextEventEstimator.h  NextEventEstimatorLens.h  NextEventEstimatorLight.h  Pathtracer.h  Primitive.h  Ray.h  Renderer.h  SDLRenderCanvas.h  Sampler.h  Scene.h  Sphere.h  Structs.h  SunSky.h  ThinLensCamera.h  Triangle.h  Vector3.h  mtrand.h
src/chromarenderer/cpp/: Ray.cpp  Triangle.cpp
src/chromarenderer/headers/: Fibonacci.h
src/main/cpp/: Ray.cpp
src/main/headers/: Ray.h  Triangle.h
